<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client_side"
    android:orientation="vertical"
    android:background="@drawable/happycostumer"
    >




    <TextView
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/happy"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"></TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="212dp"
        android:layout_height="30dp"
        android:layout_weight="100"
        android:text="@string/os"
        android:textAlignment="textStart"
        android:textColor="#F1CB7B"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"></TextView>


    <ImageButton
        android:id="@+id/im"
        android:layout_width="54dp"
        android:layout_height="61dp"
        android:backgroundTint="#27FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/happyface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"></ImageButton>

    <ImageButton
        android:id="@+id/insta"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_weight="8"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></ImageButton>

    <ImageButton
        android:id="@+id/face"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/faceboo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></ImageButton>

    <ImageButton
        android:id="@+id/twit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toEndOf="@+id/face"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></ImageButton>

    <Button
        android:id="@+id/bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/bkbt"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twit"
        app:layout_constraintVertical_bias="0.113" />


</androidx.constraintlayout.widget.ConstraintLayout>